--- a/plugins/revolution/css/layers.css
+++ b/plugins/revolution/css/layers.css
@@ -6,9 +6,9 @@ Screen Stylesheet
 
 version:   	5.0.0
 date:      	18/03/15
-author:     Themexriver
+author:     MANTRATECH & SERVICES PVT. LTD.
 email:      wabidullahsharif@gmail.com
-website:    http://www.themexriver.com
+website:    http://www.MANTRATECH & SERVICES PVT. LTD..com
 -----------------------------------------------------------------------------*/
 
 * {
