--- a/plugins/revolution/css/navigation.css
+++ b/plugins/revolution/css/navigation.css
@@ -4,9 +4,9 @@
 
  ARES SKIN
 
-author:  Themexriver
+author:  MANTRATECH & SERVICES PVT. LTD.
 email:      wabidullahsharif@gmail.com
-website:    http://www.themexriver.com
+website:    http://www.MANTRATECH & SERVICES PVT. LTD..com
 -----------------------------------------------------------------------------*/
 .ares.tparrows {
   cursor:pointer;
