--- a/css/style.css
+++ b/css/style.css
@@ -237,8 +237,8 @@ a:active {
   width: 50px;
   height: 50px;
   text-align: center;
-  background: rgba(254, 90, 14, 0.75);
-  color: #262626;
+  background: #3c4279;
+  color: #fff;
   font-size: 17px;
   line-height: 50px;
   border-radius: 50%;
